Updates: html updates

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	<!-- below is my own css and js -->
 	<link rel="stylesheet" href="C:\Users\Igor\Desktop\Igor\Java\MyProjects\Portfolio Revamp - PHP - Website 2 (Salon Template 3)\css\styles.css">
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
 
 	<!-- below is for the carousel -->
 	<link rel="stylesheet" href="C:\Users\Igor\Desktop\Igor\Java\MyProjects\Portfolio Revamp - PHP - Website 2 (Salon Template 3)\OwlCarousel2-2.3.4\dist\assets\owl.carousel.css">
@@ -31,7 +31,7 @@
 				<li><a href="#about">About</a></li>
 				<li><a href="#team">Meet the Team</a></li>
 				<li><a href="#services">Services</a></li>
-				<li><a href="#services">Gallery</a></li>
+				<li><a href="#gallery">Gallery</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#" class="fa fa-facebook"></a></li>
 				<li><a href="#" class="fa fa-twitter"></a></li>
@@ -59,8 +59,8 @@
 
 		<!-- About Us -->
 		<div class="container">
-			<section class="portfolio"><a name="about"></a> 
-				<h4>Beauty / Massages / Spa</h4>
+			<section class="portfolio">
+				<h4 id="about">Beauty / Massages / Spa</h4>
 				<h1>About Us</h1>
 				<p>With over 20 years of experience, we recognize the importance of internationalization for company growth. Approximately 25% of our clients have an international presence.</p>
 
@@ -71,11 +71,11 @@
 
 		<!-- Our Services -->
 		<div class="container">
-			<section class="portfolio"><a name="about"></a>
+			<section class="portfolio">
 				<div class="col-services">
 					<div class="service-thumbnail-1"></div>
 					<div class="service-description">
-						<h2>Massage</h2>
+						<h2 id="services">Massage</h2>
 						<p>We offer the best Hair and Beauty Treatments at the very best prices!</p><br>
 						<a href="#" class="button button-accent">Book Now</a>
 					</div>
@@ -102,12 +102,12 @@
 
 		<!-- Meet the Team -->
 		<div class="container">
-			<section class="portfolio"><a name="meet-the-team"></a>
-				<h1>Meet The Team</h1>
+			<section class="portfolio">
+				<h1 id="team">Meet The Team</h1>
 				<div class="owl-carousel owl-theme">
 		            <div class="our-team">
 		                <div class="pic">
-		                    <img src="img/team-1.jpg">
+		                    <img src="img/team-1.jpg" alt="team-1">
 		                    <ul class="social">
 		                    	<p class="team-p">This is a profile bio. This is supposed to be a couple of paragraphs about the stylist, their expertises, etc. Not very long, 3 or 4 lines should be sufficient.</p>		                    
 		                    </ul>
@@ -119,7 +119,7 @@
 		            </div>			       
 		            <div class="our-team">
 		                <div class="pic">
-		                    <img src="img/team-2.jpg">
+		                    <img src="img/team-2.jpg" alt="team-2">
 		                    <ul class="social">
 		                    	<p class="team-p">This is a profile bio. This is supposed to be a couple of paragraphs about the stylist, their expertises, etc. Not very long, 3 or 4 lines should be sufficient.</p>		                       
 		                    </ul>
@@ -131,7 +131,7 @@
 		            </div>
 		            <div class="our-team">
 		                <div class="pic">
-		                    <img src="img/team-3.jpg">
+		                    <img src="img/team-3.jpg" alt="team-3">
 		                    <ul class="social">
 		                    	<p class="team-p">This is a profile bio. This is supposed to be a couple of paragraphs about the stylist, their expertises, etc. Not very long, 3 or 4 lines should be sufficient.</p>
 		                    </ul>
@@ -148,8 +148,8 @@
 
 		<!-- Prices -->
 		<div class="container">
-			<section class="portfolio"><a name="services"></a> 
-					<h1>Services & Prices</h1>
+			<section class="portfolio">
+					<h1 id="prices">Services & Prices</h1>
     				<div id="accordion">
 					  <div class="card">
 					    <div class="card-header" id="headingOne">
@@ -249,8 +249,8 @@
 		<!-- End Before and After -->
 	
 	<!-- Gallery -->
-	<section class="portfolio"><a name="portfolio"></a> 
-		<h1>Gallery</h1>
+	<section class="portfolio">
+		<h1 id="gallery">Gallery</h1>
 		<!-- portfolio item 01 -->
 		<figure class="port-item">
 			<img src="img/gallery-1.jpg" alt="portfolio item">
@@ -308,23 +308,19 @@
 	<!-- End Gallery -->
 
 	<!-- Contact -->
-	<section class="cta"><a name="contact"></a> 
+	<section class="cta">
 		<div class="container">
-			<h1 class="title-cta">Any questions about our Services?
+			<h1 class="title-cta" id="contact">Any questions about our Services?
 				<span>Contact us and we'll get back to you shortly!</span>
 			</h1>
-				<form action="">
-					<label for="name"></label>
-					<input type="text" placeholder="Your name"><br>
-					<label for="email"></label>
-					<input type="text" placeholder="Your email"><br>
-					<label for="phone"></label>
-					<input type="text" placeholder="Your phone"><br>
-					<label for="message"></label><br>
-					<textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+				<form action="#">					
+					<input type="text" placeholder="Your name"><br>					
+					<input type="text" placeholder="Your email"><br>					
+					<input type="text" placeholder="Your phone"><br>					
+					<textarea name="#" id="#" cols="30" rows="10" placeholder="Your message"></textarea>
 				</form>
-			<a href="" class="button button-dark">Send Message!</a> <strong>or</strong>
-			<a href="" class="button button-dark">Call Us Now!</a>
+			<a href="#" class="button button-dark">Send Message!</a> <strong>or</strong>
+			<a href="#" class="button button-dark">Call Us Now!</a>
 		</div>
 	</section>
 	<!-- End Contact -->
@@ -364,7 +360,7 @@
 	<!-- Carousel -->
 	<script src="C:\Users\Igor\Desktop\Igor\Java\MyProjects\Portfolio Revamp - PHP - Website 2 (Salon Template 3)\OwlCarousel2-2.3.4\docs\assets\vendors\jquery.min.js"></script>
 	<script src="C:\Users\Igor\Desktop\Igor\Java\MyProjects\Portfolio Revamp - PHP - Website 2 (Salon Template 3)\OwlCarousel2-2.3.4\dist\owl.carousel.js"></script>
-	<script type="text/javascript">
+	<script>
 		$('.owl-carousel').owlCarousel({
 		    loop:true,
 		    margin:10,
